--- a/.github/workflows/build-and-tag.yml
+++ b/.github/workflows/build-and-tag.yml
@@ -22,17 +22,18 @@ jobs:
     permissions:
       contents: read
       packages: write
+      security-events: write  # Required for uploading SARIF results
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
 
       - name: Log in to Container Registry
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -40,6 +41,30 @@ jobs:
 
       - name: Build Docker image
         run: make build
+
+      - name: Security scan with Trivy
+        uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8 # v0.33.1
+        with:
+          image-ref: 'unifi-network:main'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+          exit-code: '1'  # Fail build on critical vulnerabilities
+          ignore-unfixed: true  # Only fail on fixable issues
+
+      - name: Upload Trivy results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@cf1bb45a277cb3c205638b2cd5c984db1c46a412 # v4.31.7
+        if: always()  # Upload even if scan fails
+        with:
+          sarif_file: 'trivy-results.sarif'
+
+      - name: Run Trivy scan summary
+        uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8 # v0.33.1
+        with:
+          image-ref: 'unifi-network:main'
+          format: 'table'
+          severity: 'CRITICAL,HIGH,MEDIUM'
+          exit-code: '0'  # Don't fail, just show summary
 
       - name: Extract UniFi version from image
         id: extract-version
@@ -97,16 +122,18 @@ jobs:
 
           # Determine which tags to apply based on branch
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            # Main branch: tag as latest + major version + full version
+            # Main branch: tag as main + latest + major version + full version
+            docker tag unifi-network:main "${IMAGE_BASE}:main"
             docker tag unifi-network:main "${IMAGE_BASE}:latest"
             docker tag unifi-network:main "${IMAGE_BASE}:${MAJOR_VERSION}"
             docker tag unifi-network:main "${IMAGE_BASE}:${FULL_VERSION}"
 
+            docker push "${IMAGE_BASE}:main"
             docker push "${IMAGE_BASE}:latest"
             docker push "${IMAGE_BASE}:${MAJOR_VERSION}"
             docker push "${IMAGE_BASE}:${FULL_VERSION}"
 
-            echo "Pushed tags: latest, ${MAJOR_VERSION}, ${FULL_VERSION}"
+            echo "Pushed tags: main, latest, ${MAJOR_VERSION}, ${FULL_VERSION}"
 
             # Auto-update stable tag if major versions match
             if [ "${{ steps.check-stable.outputs.safe_to_update }}" == "true" ]; then
