--- a/.github/workflows/build-and-tag.yml
+++ b/.github/workflows/build-and-tag.yml
@@ -48,7 +48,7 @@ jobs:
           image-ref: 'unifi-network:main'
           format: 'sarif'
           output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL'
           exit-code: '1'  # Fail build on critical vulnerabilities
           ignore-unfixed: true  # Only fail on fixable issues
 
