--- a/.github/workflows/build-and-tag.yml
+++ b/.github/workflows/build-and-tag.yml
@@ -51,6 +51,7 @@ jobs:
           severity: 'CRITICAL'
           exit-code: '1'  # Fail build on critical vulnerabilities
           ignore-unfixed: true  # Only fail on fixable issues
+          limit-severities-for-sarif: true  # Fix for trivy-action issue #309
 
       - name: Upload Trivy results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@cf1bb45a277cb3c205638b2cd5c984db1c46a412 # v4.31.7
