Update config to create verified commits

--- a/.github/workflows/check-major-version-bump.yml
+++ b/.github/workflows/check-major-version-bump.yml
@@ -115,3 +115,6 @@ jobs:
           labels: |
             stable-promotion
             major-version-bump
+          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
+          author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
+          sign-commits: true  # Required for branch protection rules
